--- a/src/components/ChristianFoundation.css
+++ b/src/components/ChristianFoundation.css
@@ -8,7 +8,7 @@ html, body {
   /* Navbar Styles (common) */
   .navbar {
     background: transparent;
-    padding: 15px;
+    /* padding: 15px; */
     position: fixed;
     top: 0;
     width: 100%;
@@ -42,7 +42,21 @@ html, body {
     width: 120px;
     height: 120px;
   }
-
+  .christianBtnText {
+    background: linear-gradient(45deg, #ff8c00, #ffa500);
+    color: white !important;
+    padding: 8px 20px;
+    border-radius: 30px;
+    transition: transform 0.3s ease, background 0.3s ease;
+    font-weight: bold;
+    text-decoration: none;
+  }
+  
+  .christianBtnText:hover {
+    transform: translateY(-3px);
+    background: linear-gradient(45deg, #ffa500, #ff8c00);
+  }
+  
   /* Mobile Responsive Styles */
 @media screen and (max-width: 768px) {
   .navbar {
