--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -11,7 +11,7 @@
     position: relative;
     width: 100%;
     height: 500px; /* Adjust height as needed */
-    background: url('./images/charity.jpg') no-repeat center center/cover;
+    background: url('./images/projects.jpg') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
